--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Run Karate and Publish Report
+name: Deploy demo pages to GitHub Pages
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -18,7 +18,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -28,16 +27,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run Karate Tests
-        run: mvn test
-
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: 'target/karate-reports'
+          path: 'html/index.html'
 
       - name: Deploy to GitHub Pages
         id: deployment
