--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: 'html/index.html'
+          path: 'html'
 
       - name: Deploy to GitHub Pages
         id: deployment
